# cp-lib-cpp

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
src/cli/: expand.hpp  main.cpp  runner.hpp
src/code/: a.cpp  b.cpp  brute.cpp  gen.cpp
tests/: stress_segtree.cpp  test_persistent_segtree.cpp
